<resources>
    <string name="app_name">Intern DCR</string>
    <string name="pg_sample">PG/Sample</string>
    <string name="choose">Choose</string>
    <string name="product_group">Product Group</string>
    <string name="literature">Literature</string>
    <string name="_00">00</string>
    <string name="physician_sample">Physician Sample</string>
    <string name="gift">Gift</string>
    <string name="input_text">Input text</string>
    <string name="accompanied_with">Accompanied With</string>
    <string name="submit">SUBMIT</string>
    <string name="remarks">Remarks</string>
</resources>
