<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_color"
    tools:context="com.example.salahuddin.interndcr.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:text="@string/pg_sample"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/title_color"
        android:layout_margin="15dp"
         />

    <View
        android:id="@+id/ssss"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="@color/view_color"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="5dp"
        >
        <Spinner
            android:id="@+id/productGroupId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/border"
            android:paddingLeft="23dp"
            android:paddingTop="8dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginLeft="15dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="0dp"
            android:background="@color/background_color"
            android:textSize="20dp"
            android:text="@string/product_group" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4"
        >
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="0.9"
            >

            <Spinner
                android:id="@+id/literatureId"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:background="@drawable/border"
                android:paddingLeft="23dp"
                android:paddingTop="8dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:background="@color/background_color"
                android:textSize="20dp"
                android:text="@string/literature" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="18dp"
            android:layout_weight="3.1"
            android:background="@drawable/border2"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/_00"
                android:textColorHint="@color/title_color"
                android:gravity="center"
                android:background="@android:color/transparent"
                />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4"
        >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="0.9"
            >

            <Spinner
                android:id="@+id/physicianSampleId"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:background="@drawable/border"
                android:paddingLeft="23dp"
                android:paddingTop="8dp"
                android:textSize="20dp"
                android:textColor="@color/colorAccent"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:background="@color/background_color"
                android:textSize="20dp"
                android:text="@string/physician_sample" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="18dp"
            android:layout_weight="3.1"
            android:background="@drawable/border2"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/_00"
                android:textColorHint="@color/title_color"
                android:gravity="center"
                android:background="@android:color/transparent"
                />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4"
        >
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="0.9"
            >

            <Spinner
                android:id="@+id/giftSpinnerId"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:background="@drawable/border"
                android:paddingLeft="23dp"
                android:paddingTop="8dp"
                android:textSize="20dp"
                android:textColor="@color/colorAccent"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:background="@color/background_color"
                android:textSize="20dp"
                android:text="@string/gift" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="18dp"
            android:layout_weight="3.1"
            android:background="@drawable/border2"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/_00"
                android:textColorHint="@color/title_color"
                android:gravity="center"
                android:background="@android:color/transparent"
                />
        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="5dp"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:background="@drawable/border2"
            android:paddingLeft="22dp"
            android:paddingTop="15dp"
            android:textSize="20dp"
            android:hint="@string/input_text"
            android:textColorHint="@color/colorAccent"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="@color/background_color"
            android:textSize="20dp"
            android:text="@string/accompanied_with" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="5dp"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:background="@drawable/border2"
            android:paddingLeft="22dp"
            android:paddingTop="15dp"
            android:textSize="20sp"
            android:maxLines="20"
            android:textColor="@color/colorAccent"
            android:hint="@string/input_text"
            android:textColorHint="@color/colorAccent"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="@color/background_color"
            android:textSize="20dp"
            android:text="@string/remarks" />
    </RelativeLayout>

    <Button
        android:id="@+id/buttonId"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_gravity="right|bottom"
        android:layout_marginRight="15dp"
        android:background="@drawable/button"
        android:layout_marginTop="5dp"
        />

</LinearLayout>
